--- a/templates/home/accueil.html.twig
+++ b/templates/home/accueil.html.twig
@@ -98,6 +98,10 @@
                                         <i class="fas fa-users mr-2 mt-1"></i>
                                         <span class="mt-1">{{ collecte.capaciteMaximale }} places</span>
                                     </p>
+                                  <a href="{{ path('Crre_RV_Par_Donateur_Id', {'collecteId': collecte.id}) }}">
+                                                Prendre rendez-vous
+                                            </a>
+
                                 </div>
                             </div>
                         </div>
